"Added console log statement in new.html.twig and moved javascripts block in base.html.twig"

--- a/src/WorkflowBundle/Resources/views/workflow/new.html.twig
+++ b/src/WorkflowBundle/Resources/views/workflow/new.html.twig
@@ -39,6 +39,7 @@
     {{ parent() }}
     <script>
         document.getElementById('add-config').addEventListener('click', function() {
+						console.log('click');
             const collection = document.querySelector('.config-collection');
             const prototype = collection.dataset.prototype;
             const index = collection.children.length;
